Fixed editor z-index.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -45,6 +45,7 @@ html, body {
   background-color: #FFE6EB;
 }
 .talc-app #talc-editor {
+  position: relative;
   padding: 10px;
   width: 90%;
   max-width: 90%;
@@ -52,6 +53,7 @@ html, body {
   border: none;
   background-color: white;
   resize: none;
+  z-index: 100;
 }
 .talc-app #talc-editor:focus {
   box-shadow: none;
@@ -66,6 +68,7 @@ html, body {
   bottom: 0;
   padding: 0;
   margin: 0;
+  z-index: 50;
 }
 .talc-app #talc-results li {
   position: relative;
